src/docs/grandMA3/csk_general_keywords/en/1.8/index.md
---
originalUrl: 'https://help2.malighting.com/Page/grandMA3/csk_general_keywords/en/1.8'
---

<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option value="10">1.0</option>
<option value="32">1.1</option>
<option value="35">1.2</option>
<option value="36">1.3</option>
<option value="37">1.4</option>
<option value="38">1.5</option>
<option value="39">1.6</option>
<option value="40">1.7</option>
<option selected="selected" value="42">1.8</option>
<option value="43">1.9</option>
<option value="44">2.0</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="16">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="500335d8-271f-4a14-b965-f71702cee50d">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/grandMA3/csk_syntax_rules/en/1.8'; " title="Go to previous page 'General syntax rules'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/grandMA3/keyword_semicolon/en/1.8';" title="Go to next page '; [Semicolon]'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

					<div class="infobox"><b>Hint:</b><br><b>New help version</b><br>The help version you selected belongs to an older software version. <a href="/Topic/SetCurrentVersionNumber/44/500335d8-271f-4a14-b965-f71702cee50d">You may want to view the latest help version.</a></div>

			<div class="pull-right">
					<button class="btn btn-mini" style="margin-right: 10px; height: 30px;" onclick="location.href = '/Media/TopicPdf/77466/42'; " title="Open/Save this topic as PDF document for viewing or printing">
						<img src="/Content/images/icons/filetype_pdf.png" style="height: 24px;"> Open topic as PDF
					</button>
				<span class="badge badge-info">Version 1.8</span>
			</div>
		<h1>General Keywords</h1>


		<p>The following subtopics cover each of the available grandMA3 keywords. They are arranged in alphabetical order.</p>

<p>Each topic describes various means of entering the keyword into the command line, defines the keyword, shows its use with proper syntax, and includes usage examples.</p>


				<br>
<div class="topic-navigation">
	<br>
	<hr>
	<h4>Sub topics</h4>
	<ul>
				<li><a href="/Page/grandMA3/keyword_semicolon/en/1.8">; [Semicolon]</a></li>
				<li><a href="/Page/grandMA3/keyword_slash/en/1.8">/ [Slash]</a></li>
				<li><a href="/Page/grandMA3/keyword_dot/en/1.8">. [Dot]</a></li>
				<li><a href="/Page/grandMA3/keyword_dot_dot/en/1.8">.. [DotDot]</a></li>
				<li><a href="/Page/grandMA3/keyword_equal/en/1.8">= [Equal]</a></li>
				<li><a href="/Page/grandMA3/keyword_gofastbackward/en/1.8">&lt;&lt;&lt; [GoFastBackward]</a></li>
				<li><a href="/Page/grandMA3/keyword_gofastforward/en/1.8">&gt;&gt;&gt; [GoFastForward]</a></li>
				<li><a href="/Page/grandMA3/keyword_minus/en/1.8">- [Minus]</a></li>
				<li><a href="/Page/grandMA3/keyword_asterisk/en/1.8">* [Asterisk]</a></li>
				<li><a href="/Page/grandMA3/keyword_percent_sign/en/1.8">% [Percent]</a></li>
				<li><a href="/Page/grandMA3/keyword_plus/en/1.8">+ [Plus]</a></li>
				<li><a href="/Page/grandMA3/keyword_absolute/en/1.8">Absolute</a></li>
				<li><a href="/Page/grandMA3/keyword_acceleration/en/1.8">Acceleration</a></li>
				<li><a href="/Page/grandMA3/keyword_action/en/1.8">Action</a></li>
				<li><a href="/Page/grandMA3/keyword_ActivationGroup/en/1.8">ActivationGroup</a></li>
				<li><a href="/Page/grandMA3/keyword_agenda/en/1.8">Agenda</a></li>
				<li><a href="/Page/grandMA3/keyword_align/en/1.8">Align</a></li>
				<li><a href="/Page/grandMA3/keyword_aligntransition/en/1.8">AlignTransition</a></li>
				<li><a href="/Page/grandMA3/keyword_appearance/en/1.8">Appearance</a></li>
				<li><a href="/Page/grandMA3/keyword_assign/en/1.8">Assign</a></li>
				<li><a href="/Page/grandMA3/keyword_at/en/1.8">At</a></li>
				<li><a href="/Page/grandMA3/keyword_attribute/en/1.8">Attribute</a></li>
				<li><a href="/Page/grandMA3/keyword_autocreate/en/1.8">AutoCreate</a></li>
				<li><a href="/Page/grandMA3/keyword_black/en/1.8">Black</a></li>
				<li><a href="/Page/grandMA3/keyword_blind/en/1.8">Blind</a></li>
				<li><a href="/Page/grandMA3/keyword_block/en/1.8">Block</a></li>
				<li><a href="/Page/grandMA3/keyword_BPM/en/1.8">BPM</a></li>
				<li><a href="/Page/grandMA3/keyword_call/en/1.8">Call</a></li>
				<li><a href="/Page/grandMA3/keyword_camera/en/1.8">Camera</a></li>
				<li><a href="/Page/grandMA3/keyword_capture/en/1.8">Capture</a></li>
				<li><a href="/Page/grandMA3/keyword_changedestination/en/1.8">ChangeDestination</a></li>
				<li><a href="/Page/grandMA3/keyword_channel/en/1.8">Channel</a></li>
				<li><a href="/Page/grandMA3/keyword_channelset/en/1.8">ChannelSet</a></li>
				<li><a href="/Page/grandMA3/keyword_chat/en/1.8">Chat</a></li>
				<li><a href="/Page/grandMA3/keyword_chatjoin/en/1.8">ChatJoin</a></li>
				<li><a href="/Page/grandMA3/keyword_chatleave/en/1.8">ChatLeave</a></li>
				<li><a href="/Page/grandMA3/keyword_cleanup/en/1.8">Cleanup</a></li>
				<li><a href="/Page/grandMA3/keyword_clear/en/1.8">Clear</a></li>
				<li><a href="/Page/grandMA3/keyword_clear_active/en/1.8">ClearActive</a></li>
				<li><a href="/Page/grandMA3/keyword_clear_all/en/1.8">ClearAll</a></li>
				<li><a href="/Page/grandMA3/keyword_clear_selection/en/1.8">ClearSelection</a></li>
				<li><a href="/Page/grandMA3/keyword_clone/en/1.8">Clone</a></li>
				<li><a href="/Page/grandMA3/keyword_commanddelay/en/1.8">CommandDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_collect/en/1.8">Collect</a></li>
				<li><a href="/Page/grandMA3/keyword_collection/en/1.8">Collection</a></li>
				<li><a href="/Page/grandMA3/keyword_color/en/1.8">Color</a></li>
				<li><a href="/Page/grandMA3/keyword_colordef/en/1.8">ColorDef</a></li>
				<li><a href="/Page/grandMA3/keyword_colortheme/en/1.8">ColorTheme</a></li>
				<li><a href="/Page/grandMA3/keyword_configuration/en/1.8">Configuration</a></li>
				<li><a href="/Page/grandMA3/keyword_console/en/1.8">Console</a></li>
				<li><a href="/Page/grandMA3/keyword_cook/en/1.8">Cook</a></li>
				<li><a href="/Page/grandMA3/keyword_copy/en/1.8">Copy</a></li>
				<li><a href="/Page/grandMA3/keyword_cue/en/1.8">Cue</a></li>
				<li><a href="/Page/grandMA3/keyword_cueabs/en/1.8">CueAbs</a></li>
				<li><a href="/Page/grandMA3/keyword_cuedelay/en/1.8">CueDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_cuefade/en/1.8">CueFade</a></li>
				<li><a href="/Page/grandMA3/keyword_cueindelay/en/1.8">CueInDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_cueinfade/en/1.8">CueInFade</a></li>
				<li><a href="/Page/grandMA3/keyword_cueoutdelay/en/1.8">CueOutDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_cueoutfade/en/1.8">CueOutFade</a></li>
				<li><a href="/Page/grandMA3/keyword_cuerel/en/1.8">CueRel</a></li>
				<li><a href="/Page/grandMA3/keyword_cueupdate/en/1.8">CueUpdate</a></li>
				<li><a href="/Page/grandMA3/keyword_currentenvironment/en/1.8">CurrentEnvironment</a></li>
				<li><a href="/Page/grandMA3/keyword_current_user/en/1.8">CurrentUser</a></li>
				<li><a href="/Page/grandMA3/keyword_current_user_profile/en/1.8">CurrentUserProfile</a></li>
				<li><a href="/Page/grandMA3/keyword_cut/en/1.8">Cut</a></li>
				<li><a href="/Page/grandMA3/keyword_datapool/en/1.8">DataPool</a></li>
				<li><a href="/Page/grandMA3/keyword_deceleration/en/1.8">Deceleration</a></li>
				<li><a href="/Page/grandMA3/keyword_decimal8/en/1.8">Decimal8</a></li>
				<li><a href="/Page/grandMA3/keyword_decimal16/en/1.8">Decimal16</a></li>
				<li><a href="/Page/grandMA3/keyword_decimal24/en/1.8">Decimal24</a></li>
				<li><a href="/Page/grandMA3/keyword_default/en/1.8">Default</a></li>
				<li><a href="/Page/grandMA3/keyword_delay/en/1.8">Delay</a></li>
				<li><a href="/Page/grandMA3/keyword_delete/en/1.8">Delete</a></li>
				<li><a href="/Page/grandMA3/keyword_deleteotherversions/en/1.8">DeleteOtherVersions</a></li>
				<li><a href="/Page/grandMA3/keyword_delglobalvar/en/1.8">DelGlobalVar</a></li>
				<li><a href="/Page/grandMA3/keyword_deluservar/en/1.8">DelUserVar</a></li>
				<li><a href="/Page/grandMA3/keyword_dismiss/en/1.8">Dismiss</a></li>
				<li><a href="/Page/grandMA3/keyword_display/en/1.8">Display</a></li>
				<li><a href="/Page/grandMA3/keyword_dmx_layer/en/1.8">DMXLayer</a></li>
				<li><a href="/Page/grandMA3/keyword_dmx_address/en/1.8">DMXAddress</a></li>
				<li><a href="/Page/grandMA3/keyword_dmxreadout/en/1.8">DMXReadout</a></li>
				<li><a href="/Page/grandMA3/keyword_dmx_universe/en/1.8">DMXUniverse</a></li>
				<li><a href="/Page/grandMA3/keyword_doublespeed/en/1.8">DoubleSpeed</a></li>
				<li><a href="/Page/grandMA3/keyword_down/en/1.8">Down</a></li>
				<li><a href="/Page/grandMA3/keyword_dumplog/en/1.8">DumpLog</a></li>
				<li><a href="/Page/grandMA3/keyword_drive/en/1.8">Drive</a></li>
				<li><a href="/Page/grandMA3/keyword_echo/en/1.8">Echo</a></li>
				<li><a href="/Page/grandMA3/keyword_Edit/en/1.8">Edit</a></li>
				<li><a href="/Page/grandMA3/keyword_EditSetting/en/1.8">EditSetting</a></li>
				<li><a href="/Page/grandMA3/keyword_eject/en/1.8">Eject</a></li>
				<li><a href="/Page/grandMA3/keyword_effect/en/1.8">Effect</a></li>
				<li><a href="/Page/grandMA3/keyword_endif/en/1.8">EndIf</a></li>
				<li><a href="/Page/grandMA3/keyword_environment/en/1.8">Environment</a></li>
				<li><a href="/Page/grandMA3/keyword_exchange/en/1.8">Exchange</a></li>
				<li><a href="/Page/grandMA3/keyword_executor/en/1.8">Executor</a></li>
				<li><a href="/Page/grandMA3/keyword_export/en/1.8">Export</a></li>
				<li><a href="/Page/grandMA3/keyword_extract/en/1.8">Extract</a></li>
				<li><a href="/Page/grandMA3/keyword_extension/en/1.8">Extension</a></li>
				<li><a href="/Page/grandMA3/keyword_fade/en/1.8">Fade</a></li>
				<li><a href="/Page/grandMA3/keyword_fader/en/1.8">Fader</a></li>
				<li><a href="/Page/grandMA3/keyword_fadermaster/en/1.8">FaderMaster</a></li>
				<li><a href="/Page/grandMA3/keyword_faderrate/en/1.8">FaderRate</a></li>
				<li><a href="/Page/grandMA3/keyword_faderspeed/en/1.8">FaderSpeed</a></li>
				<li><a href="/Page/grandMA3/keyword_fadertemp/en/1.8">FaderTemp</a></li>
				<li><a href="/Page/grandMA3/keyword_fadertime/en/1.8">FaderTime</a></li>
				<li><a href="/Page/grandMA3/keyword_faderx/en/1.8">FaderX</a></li>
				<li><a href="/Page/grandMA3/keyword_faderxa/en/1.8">FaderXA</a></li>
				<li><a href="/Page/grandMA3/keyword_faderxb/en/1.8">FaderXB</a></li>
				<li><a href="/Page/grandMA3/keyword_featuregroup/en/1.8">FeatureGroup</a></li>
				<li><a href="/Page/grandMA3/keyword_filter/en/1.8">Filter</a></li>
				<li><a href="/Page/grandMA3/keyword_fix/en/1.8">Fix</a></li>
				<li><a href="/Page/grandMA3/keyword_fixture_class/en/1.8">FixtureClass</a></li>
				<li><a href="/Page/grandMA3/keyword_fixture_layer/en/1.8">FixtureLayer</a></li>
				<li><a href="/Page/grandMA3/keyword_fixture/en/1.8">Fixture</a></li>
				<li><a href="/Page/grandMA3/keyword_fixturetype/en/1.8">FixtureType</a></li>
				<li><a href="/Page/grandMA3/keyword_flip/en/1.8">Flip</a></li>
				<li><a href="/Page/grandMA3/keyword_flash/en/1.8">Flash</a></li>
				<li><a href="/Page/grandMA3/keyword_fog/en/1.8">Fog</a></li>
				<li><a href="/Page/grandMA3/keyword_font/en/1.8">Font</a></li>
				<li><a href="/Page/grandMA3/keyword_freeze/en/1.8">Freeze</a></li>
				<li><a href="/Page/grandMA3/keyword_full/en/1.8">Full</a></li>
				<li><a href="/Page/grandMA3/keyword_gel/en/1.8">Gel</a></li>
				<li><a href="/Page/grandMA3/keyword_getglobalvar/en/1.8">GetGlobalVar</a></li>
				<li><a href="/Page/grandMA3/keyword_getuservar/en/1.8">GetUserVar</a></li>
				<li><a href="/Page/grandMA3/keyword_goplus/en/1.8">Go+</a></li>
				<li><a href="/Page/grandMA3/keyword_gominus/en/1.8">Go-</a></li>
				<li><a href="/Page/grandMA3/keyword_goto/en/1.8">Goto</a></li>
				<li><a href="/Page/grandMA3/keyword_grid/en/1.8">Grid</a></li>
				<li><a href="/Page/grandMA3/keyword_gridpos/en/1.8">GridPos</a></li>
				<li><a href="/Page/grandMA3/keyword_group/en/1.8">Group</a></li>
				<li><a href="/Page/grandMA3/keyword_halfspeed/en/1.8">HalfSpeed</a></li>
				<li><a href="/Page/grandMA3/keyword_hardwarekey/en/1.8">HardwareKey</a></li>
				<li><a href="/Page/grandMA3/keyword_help/en/1.8">Help</a></li>
				<li><a href="/Page/grandMA3/keyword_helplua/en/1.8">Helplua</a></li>
				<li><a href="/Page/grandMA3/keyword_hex8/en/1.8">Hex8</a></li>
				<li><a href="/Page/grandMA3/keyword_hex16/en/1.8">Hex16</a></li>
				<li><a href="/Page/grandMA3/keyword_hex24/en/1.8">Hex24</a></li>
				<li><a href="/Page/grandMA3/keyword_highlight/en/1.8">Highlight</a></li>
				<li><a href="/Page/grandMA3/keyword_houselights/en/1.8">Houselights</a></li>
				<li><a href="/Page/grandMA3/keyword_hz/en/1.8">Hz</a></li>
				<li><a href="/Page/grandMA3/keyword_if/en/1.8">If</a></li>
				<li><a href="/Page/grandMA3/keyword_ifactive/en/1.8">IfActive</a></li>
				<li><a href="/Page/grandMA3/keyword_ifoutput/en/1.8">IfOutput</a></li>
				<li><a href="/Page/grandMA3/keyword_ifprog/en/1.8">IfProg</a></li>
				<li><a href="/Page/grandMA3/keyword_image/en/1.8">Image</a></li>
				<li><a href="/Page/grandMA3/keyword_import/en/1.8">Import</a></li>
				<li><a href="/Page/grandMA3/keyword_index/en/1.8">Index</a></li>
				<li><a href="/Page/grandMA3/keyword_insert/en/1.8">Insert</a></li>
				<li><a href="/Page/grandMA3/keyword_integrate/en/1.8">Integrate</a></li>
				<li><a href="/Page/grandMA3/keyword_interface/en/1.8">Interface</a></li>
				<li><a href="/Page/grandMA3/keyword_invert/en/1.8">Invert</a></li>
				<li><a href="/Page/grandMA3/keyword_invite/en/1.8">Invite</a></li>
				<li><a href="/Page/grandMA3/keyword_ip/en/1.8">IP</a></li>
				<li><a href="/Page/grandMA3/keyword_joinsession/en/1.8">JoinSession</a></li>
				<li><a href="/Page/grandMA3/keyword_key/en/1.8">Key</a></li>
				<li><a href="/Page/grandMA3/keyword_keyboard/en/1.8">Keyboard</a></li>
				<li><a href="/Page/grandMA3/keyword_keyboardshortcuts/en/1.8">KeyboardShortcuts</a></li>
				<li><a href="/Page/grandMA3/keyword_knockin/en/1.8">Knockin</a></li>
				<li><a href="/Page/grandMA3/keyword_knockout/en/1.8">Knockout</a></li>
				<li><a href="/Page/grandMA3/keyword_label/en/1.8">Label</a></li>
				<li><a href="/Page/grandMA3/keyword_language/en/1.8">Language</a></li>
				<li><a href="/Page/grandMA3/keyword_layout/en/1.8">Layout</a></li>
				<li><a href="/Page/grandMA3/keyword_learnspeed/en/1.8">LearnSpeed</a></li>
				<li><a href="/Page/grandMA3/keyword_leavesession/en/1.8">LeaveSession</a></li>
				<li><a href="/Page/grandMA3/keyword_library/en/1.8">Library</a></li>
				<li><a href="/Page/grandMA3/keyword_list/en/1.8">List</a></li>
				<li><a href="/Page/grandMA3/keyword_listowner/en/1.8">ListOwner</a></li>
				<li><a href="/Page/grandMA3/keyword_listref/en/1.8">ListRef</a></li>
				<li><a href="/Page/grandMA3/keyword_load/en/1.8">Load</a></li>
				<li><a href="/Page/grandMA3/keyword_loaded/en/1.8">Loaded</a></li>
				<li><a href="/Page/grandMA3/keyword_loadshow/en/1.8">LoadShow</a></li>
				<li><a href="/Page/grandMA3/keyword_lock/en/1.8">Lock</a></li>
				<li><a href="/Page/grandMA3/keyword_login/en/1.8">Login</a></li>
				<li><a href="/Page/grandMA3/keyword_logout/en/1.8">Logout</a></li>
				<li><a href="/Page/grandMA3/keyword_lowlight/en/1.8">Lowlight</a></li>
				<li><a href="/Page/grandMA3/keyword_lua/en/1.8">Lua</a></li>
				<li><a href="/Page/grandMA3/keyword_lua_file/en/1.8">LuaFile</a></li>
				<li><a href="/Page/grandMA3/keyword_macro/en/1.8">Macro</a></li>
				<li><a href="/Page/grandMA3/keyword_marker/en/1.8">MArker</a></li>
				<li><a href="/Page/grandMA3/keyword_master/en/1.8">Master</a></li>
				<li><a href="/Page/grandMA3/keyword_MAtricks/en/1.8">MAtricks</a></li>
				<li><a href="/Page/grandMA3/keyword_measure/en/1.8">Measure</a></li>
				<li><a href="/Page/grandMA3/keyword_media/en/1.8">Media</a></li>
				<li><a href="/Page/grandMA3/keyword_meminfo/en/1.8">MemInfo</a></li>
				<li><a href="/Page/grandMA3/keyword_menu/en/1.8">Menu</a></li>
				<li><a href="/Page/grandMA3/keyword_mesh/en/1.8">Mesh</a></li>
				<li><a href="/Page/grandMA3/keyword_messagecenter/en/1.8">MessageCenter</a></li>
				<li><a href="/Page/grandMA3/keyword_monitor/en/1.8">Monitor</a></li>
				<li><a href="/Page/grandMA3/keyword_move/en/1.8">Move</a></li>
				<li><a href="/Page/grandMA3/keyword_multipatch/en/1.8">Multipatch</a></li>
				<li><a href="/Page/grandMA3/keyword_myrunningmacro/en/1.8">MyRunningMacro</a></li>
				<li><a href="/Page/grandMA3/keyword_myrunningpreset/en/1.8">MyRunningPreset</a></li>
				<li><a href="/Page/grandMA3/keyword_myrunningsequence/en/1.8">MyRunningSequence</a></li>
				<li><a href="/Page/grandMA3/keyword_natural/en/1.8">Natural</a></li>
				<li><a href="/Page/grandMA3/keyword_ndi/en/1.8">NDI</a></li>
				<li><a href="/Page/grandMA3/keyword_newshow/en/1.8">NewShow</a></li>
				<li><a href="/Page/grandMA3/keyword_nexty/en/1.8">NextY</a></li>
				<li><a href="/Page/grandMA3/keyword_nextz/en/1.8">NextZ</a></li>
				<li><a href="/Page/grandMA3/keyword_next/en/1.8">Next</a></li>
				<li><a href="/Page/grandMA3/keyword_node/en/1.8">Node</a></li>
				<li><a href="/Page/grandMA3/keyword_nondim/en/1.8">NonDim</a></li>
				<li><a href="/Page/grandMA3/keyword_normal/en/1.8">Normal</a></li>
				<li><a href="/Page/grandMA3/keyword_off/en/1.8">Off</a></li>
				<li><a href="/Page/grandMA3/keyword_offset/en/1.8">Offset</a></li>
				<li><a href="/Page/grandMA3/keyword_on/en/1.8">On</a></li>
				<li><a href="/Page/grandMA3/keyword_onpc/en/1.8">onPC</a></li>
				<li><a href="/Page/grandMA3/keyword_osc/en/1.8">OSC</a></li>
				<li><a href="/Page/grandMA3/keyword_oops/en/1.8">Oops</a></li>
				<li><a href="/Page/grandMA3/keyword_outputlayer/en/1.8">OutputLayer</a></li>
				<li><a href="/Page/grandMA3/keyword_page/en/1.8">Page</a></li>
				<li><a href="/Page/grandMA3/keyword_part/en/1.8">Part</a></li>
				<li><a href="/Page/grandMA3/keyword_park/en/1.8">Park</a></li>
				<li><a href="/Page/grandMA3/keyword_paste/en/1.8">Paste</a></li>
				<li><a href="/Page/grandMA3/keyword_patch/en/1.8">Patch</a></li>
				<li><a href="/Page/grandMA3/keyword_pause/en/1.8">Pause</a></li>
				<li><a href="/Page/grandMA3/keyword_percent/en/1.8">Percent</a></li>
				<li><a href="/Page/grandMA3/keyword_percentfine/en/1.8">PercentFine</a></li>
				<li><a href="/Page/grandMA3/keyword_phase/en/1.8">Phase</a></li>
				<li><a href="/Page/grandMA3/keyword_physical/en/1.8">Physical</a></li>
				<li><a href="/Page/grandMA3/keyword_plugin/en/1.8">Plugin</a></li>
				<li><a href="/Page/grandMA3/keyword_preset/en/1.8">Preset</a></li>
				<li><a href="/Page/grandMA3/keyword_presetupdate/en/1.8">PresetUpdate</a></li>
				<li><a href="/Page/grandMA3/keyword_press/en/1.8">Press</a></li>
				<li><a href="/Page/grandMA3/keyword_preview/en/1.8">Preview</a></li>
				<li><a href="/Page/grandMA3/keyword_previousy/en/1.8">PreviousY</a></li>
				<li><a href="/Page/grandMA3/keyword_previousz/en/1.8">PreviousZ</a></li>
				<li><a href="/Page/grandMA3/keyword_previous/en/1.8">Previous</a></li>
				<li><a href="/Page/grandMA3/keyword_programmer/en/1.8">Programmer</a></li>
				<li><a href="/Page/grandMA3/keyword_property/en/1.8">Property</a></li>
				<li><a href="/Page/grandMA3/keyword_pu/en/1.8">PU</a></li>
				<li><a href="/Page/grandMA3/keyword_pyro/en/1.8">Pyro</a></li>
				<li><a href="/Page/grandMA3/keyword_rate/en/1.8">Rate1</a></li>
				<li><a href="/Page/grandMA3/keyword_rdm/en/1.8">RDM</a></li>
				<li><a href="/Page/grandMA3/keyword_readout/en/1.8">Readout</a></li>
				<li><a href="/Page/grandMA3/keyword_reboot/en/1.8">Reboot</a></li>
				<li><a href="/Page/grandMA3/keyword_recast/en/1.8">Recast</a></li>
				<li><a href="/Page/grandMA3/keyword_record/en/1.8">Record</a></li>
				<li><a href="/Page/grandMA3/keyword_relation/en/1.8">Relation</a></li>
				<li><a href="/Page/grandMA3/keyword_relative/en/1.8">Relative</a></li>
				<li><a href="/Page/grandMA3/keyword_release/en/1.8">Release</a></li>
				<li><a href="/Page/grandMA3/keyword_ReloadPlugins/en/1.8">ReloadPlugins</a></li>
				<li><a href="/Page/grandMA3/keyword_reloadui/en/1.8">ReloadUI</a></li>
				<li><a href="/Page/grandMA3/keyword_remote/en/1.8">Remote</a></li>
				<li><a href="/Page/grandMA3/keyword_remotehid/en/1.8">RemoteHID</a></li>
				<li><a href="/Page/grandMA3/keyword_remotecommand/en/1.8">RemoteCommand</a></li>
				<li><a href="/Page/grandMA3/keyword_remove/en/1.8">Remove</a></li>
				<li><a href="/Page/grandMA3/keyword_renderquality/en/1.8">RenderQuality</a></li>
				<li><a href="/Page/grandMA3/keyword_reset/en/1.8">Reset</a></li>
				<li><a href="/Page/grandMA3/keyword_restart/en/1.8">Restart</a></li>
				<li><a href="/Page/grandMA3/keyword_root/en/1.8">Root</a></li>
				<li><a href="/Page/grandMA3/keyword_rtchannel/en/1.8">RTChannel</a></li>
				<li><a href="/Page/grandMA3/keyword_runningmacro/en/1.8">RunningMacro</a></li>
				<li><a href="/Page/grandMA3/keyword_runningpreset/en/1.8">RunningPreset</a></li>
				<li><a href="/Page/grandMA3/keyword_runningsequence/en/1.8">RunningSequence</a></li>
				<li><a href="/Page/grandMA3/keyword_runningtimecode/en/1.8">RunningTimecode</a></li>
				<li><a href="/Page/grandMA3/keyword_saveshow/en/1.8">SaveShow</a></li>
				<li><a href="/Page/grandMA3/keyword_screenconfig/en/1.8">ScreenConfig</a></li>
				<li><a href="/Page/grandMA3/keyword_screencontent/en/1.8">ScreenContent</a></li>
				<li><a href="/Page/grandMA3/keyword_scribble/en/1.8">Scribble</a></li>
				<li><a href="/Page/grandMA3/keyword_seconds/en/1.8">Seconds</a></li>
				<li><a href="/Page/grandMA3/keyword_select/en/1.8">Select</a></li>
				<li><a href="/Page/grandMA3/keyword_selection/en/1.8">Selection</a></li>
				<li><a href="/Page/grandMA3/keyword_selfix/en/1.8">SelFix</a></li>
				<li><a href="/Page/grandMA3/keyword_sequence/en/1.8">Sequence</a></li>
				<li><a href="/Page/grandMA3/keyword_sendmidi/en/1.8">SendMIDI</a></li>
				<li><a href="/Page/grandMA3/keyword_sendosc/en/1.8">SendOSC</a></li>
				<li><a href="/Page/grandMA3/keyword_set/en/1.8">Set</a></li>
				<li><a href="/Page/grandMA3/keyword_setglobalvar/en/1.8">SetGlobalVar</a></li>
				<li><a href="/Page/grandMA3/keyword_setuservar/en/1.8">SetUserVar</a></li>
				<li><a href="/Page/grandMA3/keyword_shuffle/en/1.8">Shuffle</a></li>
				<li><a href="/Page/grandMA3/keyword_shutdown/en/1.8">Shutdown</a></li>
				<li><a href="/Page/grandMA3/keyword_snapdelay/en/1.8">SnapDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_software_import/en/1.8">SoftwareImport</a></li>
				<li><a href="/Page/grandMA3/keyword_SoftwareUpdate/en/1.8">SoftwareUpdate</a></li>
				<li><a href="/Page/grandMA3/keyword_soundchannel/en/1.8">SoundChannel</a></li>
				<li><a href="/Page/grandMA3/keyword_solo/en/1.8">Solo</a></li>
				<li><a href="/Page/grandMA3/keyword_SpecialExec/en/1.8">SpecialExecutor</a></li>
				<li><a href="/Page/grandMA3/keyword_speed/en/1.8">Speed</a></li>
				<li><a href="/Page/grandMA3/keyword_speed1/en/1.8">Speed1</a></li>
				<li><a href="/Page/grandMA3/keyword_stage/en/1.8">Stage</a></li>
				<li><a href="/Page/grandMA3/keyword_station/en/1.8">Station</a></li>
				<li><a href="/Page/grandMA3/keyword_step/en/1.8">Step</a></li>
				<li><a href="/Page/grandMA3/keyword_stomp/en/1.8">Stomp</a></li>
				<li><a href="/Page/grandMA3/keyword_switchgma2mode/en/1.8">SwitchGma2Mode</a></li>
				<li><a href="/Page/grandMA3/keywords_swop/en/1.8">Swop</a></li>
				<li><a href="/Page/grandMA3/keyword_store/en/1.8">Store</a></li>
				<li><a href="/Page/grandMA3/keyword_temp/en/1.8">Temp</a></li>
				<li><a href="/Page/grandMA3/keyword_texture/en/1.8">Texture</a></li>
				<li><a href="/Page/grandMA3/keyword_thru/en/1.8">Thru</a></li>
				<li><a href="/Page/grandMA3/keyword_time/en/1.8">Time</a></li>
				<li><a href="/Page/grandMA3/keyword_timecode/en/1.8">Timecode</a></li>
				<li><a href="/Page/grandMA3/Keyword_timecodeslot/en/1.8">TimecodeSlot</a></li>
				<li><a href="/Page/grandMA3/keyword_toggle/en/1.8">Toggle</a></li>
				<li><a href="/Page/grandMA3/keyword_topup/en/1.8">TopUp</a></li>
				<li><a href="/Page/grandMA3/keyword_top/en/1.8">Top</a></li>
				<li><a href="/Page/grandMA3/keyword_transition/en/1.8">Transition</a></li>
				<li><a href="/Page/grandMA3/keyword_type/en/1.8">Type</a></li>
				<li><a href="/Page/grandMA3/keyword_uichannel/en/1.8">UIChannel</a></li>
				<li><a href="/Page/grandMA3/keyword_uigridselection/en/1.8">UIGridSelection</a></li>
				<li><a href="/Page/grandMA3/keyword_unblock/en/1.8">UnBlock</a></li>
				<li><a href="/Page/grandMA3/keyword_universal/en/1.8">Universal</a></li>
				<li><a href="/Page/grandMA3/keyword_unlock/en/1.8">UnLock</a></li>
				<li><a href="/Page/grandMA3/keyword_unpark/en/1.8">UnPark</a></li>
				<li><a href="/Page/grandMA3/keyword_unpress/en/1.8">UnPress</a></li>
				<li><a href="/Page/grandMA3/keyword_up/en/1.8">Up</a></li>
				<li><a href="/Page/grandMA3/keyword_update/en/1.8">Update</a></li>
				<li><a href="/Page/grandMA3/keyword_updatecontent/en/1.8">UpdateContent</a></li>
				<li><a href="/Page/grandMA3/keyword_user1/en/1.8">User1</a></li>
				<li><a href="/Page/grandMA3/keyword_user2/en/1.8">User2</a></li>
				<li><a href="/Page/grandMA3/keyword_user/en/1.8">User</a></li>
				<li><a href="/Page/grandMA3/keyword_user_profile/en/1.8">UserProfile</a></li>
				<li><a href="/Page/grandMA3/keyword_videos/en/1.8">Video</a></li>
				<li><a href="/Page/grandMA3/keyword_version/en/1.8">Version</a></li>
				<li><a href="/Page/grandMA3/keyword_view/en/1.8">View</a></li>
				<li><a href="/Page/grandMA3/keyword_viewbutton/en/1.8">ViewButton</a></li>
				<li><a href="/Page/grandMA3/keyword_width/en/1.8">Width</a></li>
				<li><a href="/Page/grandMA3/keyword_world/en/1.8">World</a></li>
				<li><a href="/Page/grandMA3/keyword_Xkeys/en/1.8">Xkeys</a></li>
				<li><a href="/Page/grandMA3/keyword_zero/en/1.8">Zero</a></li>
	</ul>

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option value="10">1.0</option>
<option value="32">1.1</option>
<option value="35">1.2</option>
<option value="36">1.3</option>
<option value="37">1.4</option>
<option value="38">1.5</option>
<option value="39">1.6</option>
<option value="40">1.7</option>
<option selected="selected" value="42">1.8</option>
<option value="43">1.9</option>
<option value="44">2.0</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="16">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="500335d8-271f-4a14-b965-f71702cee50d">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/grandMA3/csk_syntax_rules/en/1.8'; " title="Go to previous page 'General syntax rules'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/grandMA3/keyword_semicolon/en/1.8';" title="Go to next page '; [Semicolon]'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
	<div class="clear-fix"></div>
	<div class="pull-right">
	
			<button class="btn btn-mini" onclick="location.href='/Media/TopicPdf/77466/42';" title="Open/Save this topic as PDF document for viewing or printing">
				<img src="/Content/images/icons/filetype_pdf.png"> Open topic as PDF
			</button>
	</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

	
