src/docs/grandMA3/csk_general_keywords/en/1.9/index.md
---
originalUrl: 'https://help2.malighting.com/Page/grandMA3/csk_general_keywords/en/1.9'
---

<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option value="10">1.0</option>
<option value="32">1.1</option>
<option value="35">1.2</option>
<option value="36">1.3</option>
<option value="37">1.4</option>
<option value="38">1.5</option>
<option value="39">1.6</option>
<option value="40">1.7</option>
<option value="42">1.8</option>
<option selected="selected" value="43">1.9</option>
<option value="44">2.0</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="16">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="500335d8-271f-4a14-b965-f71702cee50d">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/grandMA3/csk_parent_child/en/1.9'; " title="Go to previous page 'Parent child concept'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/grandMA3/keyword_semicolon/en/1.9';" title="Go to next page '; [Semicolon]'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

					<div class="infobox"><b>Hint:</b><br><b>New help version</b><br>The help version you selected belongs to an older software version. <a href="/Topic/SetCurrentVersionNumber/44/500335d8-271f-4a14-b965-f71702cee50d">You may want to view the latest help version.</a></div>

			<div class="pull-right">
					<button class="btn btn-mini" style="margin-right: 10px; height: 30px;" onclick="location.href = '/Media/TopicPdf/86573/43'; " title="Open/Save this topic as PDF document for viewing or printing">
						<img src="/Content/images/icons/filetype_pdf.png" style="height: 24px;"> Open topic as PDF
					</button>
				<span class="badge badge-info">Version 1.9</span>
			</div>
		<h1>General Keywords</h1>


		<p>Using keywords provides one of many possibilities to operate the grandMA3 console.&nbsp;</p>

<p>The following subtopics cover each of the available grandMA3 keywords. These are arranged in alphabetical order.</p>

<p>Each topic describes various means of entering the keyword into the command line, provides definition, proper syntax, and depicts examples of the keywords.</p>


				<br>
<div class="topic-navigation">
	<br>
	<hr>
	<h4>Sub topics</h4>
	<ul>
				<li><a href="/Page/grandMA3/keyword_semicolon/en/1.9">; [Semicolon]</a></li>
				<li><a href="/Page/grandMA3/keyword_slash/en/1.9">/ [Slash]</a></li>
				<li><a href="/Page/grandMA3/keyword_dot/en/1.9">. [Dot]</a></li>
				<li><a href="/Page/grandMA3/keyword_equal/en/1.9">= [Equal]</a></li>
				<li><a href="/Page/grandMA3/keyword_gofastbackward/en/1.9">&lt;&lt;&lt; [GoFastBackward]</a></li>
				<li><a href="/Page/grandMA3/keyword_gofastforward/en/1.9">&gt;&gt;&gt; [GoFastForward]</a></li>
				<li><a href="/Page/grandMA3/keyword_minus/en/1.9">- [Minus]</a></li>
				<li><a href="/Page/grandMA3/keyword_asterisk/en/1.9">* [Asterisk]</a></li>
				<li><a href="/Page/grandMA3/keyword_percent_sign/en/1.9">% [Percent]</a></li>
				<li><a href="/Page/grandMA3/keyword_plus/en/1.9">+ [Plus]</a></li>
				<li><a href="/Page/grandMA3/keyword_absolute/en/1.9">Absolute</a></li>
				<li><a href="/Page/grandMA3/keyword_acceleration/en/1.9">Acceleration</a></li>
				<li><a href="/Page/grandMA3/keyword_action/en/1.9">Action</a></li>
				<li><a href="/Page/grandMA3/keyword_Activationgroup/en/1.9">ActivationGroup</a></li>
				<li><a href="/Page/grandMA3/keyword_agenda/en/1.9">Agenda</a></li>
				<li><a href="/Page/grandMA3/keyword_align/en/1.9">Align</a></li>
				<li><a href="/Page/grandMA3/keyword_aligntransition/en/1.9">AlignTransition</a></li>
				<li><a href="/Page/grandMA3/keyword_appearance/en/1.9">Appearance</a></li>
				<li><a href="/Page/grandMA3/keyword_assign/en/1.9">Assign</a></li>
				<li><a href="/Page/grandMA3/keyword_at/en/1.9">At</a></li>
				<li><a href="/Page/grandMA3/keyword_attribute/en/1.9">Attribute</a></li>
				<li><a href="/Page/grandMA3/keyword_autocreate/en/1.9">AutoCreate</a></li>
				<li><a href="/Page/grandMA3/keyword_black/en/1.9">Black</a></li>
				<li><a href="/Page/grandMA3/keyword_blind/en/1.9">Blind</a></li>
				<li><a href="/Page/grandMA3/keyword_block/en/1.9">Block</a></li>
				<li><a href="/Page/grandMA3/keyword_BPM/en/1.9">BPM</a></li>
				<li><a href="/Page/grandMA3/keyword_call/en/1.9">Call</a></li>
				<li><a href="/Page/grandMA3/keyword_cancelsoftwareupdate/en/1.9">CancelSoftwareUpdate</a></li>
				<li><a href="/Page/grandMA3/keyword_camera/en/1.9">Camera</a></li>
				<li><a href="/Page/grandMA3/keyword_capture/en/1.9">Capture</a></li>
				<li><a href="/Page/grandMA3/keyword_changedestination/en/1.9">ChangeDestination</a></li>
				<li><a href="/Page/grandMA3/keyword_channel/en/1.9">Channel</a></li>
				<li><a href="/Page/grandMA3/keyword_channelset/en/1.9">ChannelSet</a></li>
				<li><a href="/Page/grandMA3/keyword_chat/en/1.9">Chat</a></li>
				<li><a href="/Page/grandMA3/keyword_chatjoin/en/1.9">ChatJoin</a></li>
				<li><a href="/Page/grandMA3/keyword_chatleave/en/1.9">ChatLeave</a></li>
				<li><a href="/Page/grandMA3/keyword_cleanup/en/1.9">CleanUp</a></li>
				<li><a href="/Page/grandMA3/keyword_clear/en/1.9">Clear</a></li>
				<li><a href="/Page/grandMA3/keyword_clear_active/en/1.9">ClearActive</a></li>
				<li><a href="/Page/grandMA3/keyword_clear_all/en/1.9">ClearAll</a></li>
				<li><a href="/Page/grandMA3/keyword_clear_selection/en/1.9">ClearSelection</a></li>
				<li><a href="/Page/grandMA3/keyword_clone/en/1.9">Clone</a></li>
				<li><a href="/Page/grandMA3/keyword_commanddelay/en/1.9">CommandDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_collect/en/1.9">Collect</a></li>
				<li><a href="/Page/grandMA3/keyword_collection/en/1.9">Collection</a></li>
				<li><a href="/Page/grandMA3/keyword_color/en/1.9">Color</a></li>
				<li><a href="/Page/grandMA3/keyword_colordefinition/en/1.9">ColorDefinition</a></li>
				<li><a href="/Page/grandMA3/keyword_colortheme/en/1.9">ColorTheme</a></li>
				<li><a href="/Page/grandMA3/keyword_configuration/en/1.9">Configuration</a></li>
				<li><a href="/Page/grandMA3/keyword_console/en/1.9">Console</a></li>
				<li><a href="/Page/grandMA3/keyword_cook/en/1.9">Cook</a></li>
				<li><a href="/Page/grandMA3/keyword_copy/en/1.9">Copy</a></li>
				<li><a href="/Page/grandMA3/keyword_cue/en/1.9">Cue</a></li>
				<li><a href="/Page/grandMA3/keyword_cueabsolute/en/1.9">CueAbsolute</a></li>
				<li><a href="/Page/grandMA3/keyword_cuedelay/en/1.9">CueDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_cuefade/en/1.9">CueFade</a></li>
				<li><a href="/Page/grandMA3/keyword_cueindelay/en/1.9">CueInDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_cueinfade/en/1.9">CueInFade</a></li>
				<li><a href="/Page/grandMA3/keyword_cueoutdelay/en/1.9">CueOutDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_cueoutfade/en/1.9">CueOutFade</a></li>
				<li><a href="/Page/grandMA3/keyword_cuerelative/en/1.9">CueRelative</a></li>
				<li><a href="/Page/grandMA3/keyword_cueupdate/en/1.9">CueUpdate</a></li>
				<li><a href="/Page/grandMA3/keyword_currentenvironment/en/1.9">CurrentEnvironment</a></li>
				<li><a href="/Page/grandMA3/keyword_current_user/en/1.9">CurrentUser</a></li>
				<li><a href="/Page/grandMA3/keyword_current_user_profile/en/1.9">CurrentUserProfile</a></li>
				<li><a href="/Page/grandMA3/keyword_cut/en/1.9">Cut</a></li>
				<li><a href="/Page/grandMA3/keyword_datapool/en/1.9">DataPool</a></li>
				<li><a href="/Page/grandMA3/keyword_deceleration/en/1.9">Deceleration</a></li>
				<li><a href="/Page/grandMA3/keyword_decimal8/en/1.9">Decimal8</a></li>
				<li><a href="/Page/grandMA3/keyword_decimal16/en/1.9">Decimal16</a></li>
				<li><a href="/Page/grandMA3/keyword_decimal24/en/1.9">Decimal24</a></li>
				<li><a href="/Page/grandMA3/keyword_default/en/1.9">Default</a></li>
				<li><a href="/Page/grandMA3/keyword_delay/en/1.9">Delay</a></li>
				<li><a href="/Page/grandMA3/keyword_delete/en/1.9">Delete</a></li>
				<li><a href="/Page/grandMA3/keyword_deleteotherversions/en/1.9">DeleteOtherVersions</a></li>
				<li><a href="/Page/grandMA3/keyword_deleteglobalvariable/en/1.9">DeleteGlobalVariable</a></li>
				<li><a href="/Page/grandMA3/keyword_deleteuservariable/en/1.9">DeleteUserVariable</a></li>
				<li><a href="/Page/grandMA3/keyword_dismiss/en/1.9">Dismiss</a></li>
				<li><a href="/Page/grandMA3/keyword_display/en/1.9">Display</a></li>
				<li><a href="/Page/grandMA3/keyword_dmx_address/en/1.9">DMXAddress</a></li>
				<li><a href="/Page/grandMA3/keyword_dmx_layer/en/1.9">DMXLayer</a></li>
				<li><a href="/Page/grandMA3/keyword_dmxreadout/en/1.9">DMXReadout</a></li>
				<li><a href="/Page/grandMA3/keyword_dmx_universe/en/1.9">DMXUniverse</a></li>
				<li><a href="/Page/grandMA3/keyword_doublespeed/en/1.9">DoubleSpeed</a></li>
				<li><a href="/Page/grandMA3/keyword_down/en/1.9">Down</a></li>
				<li><a href="/Page/grandMA3/keyword_dumplog/en/1.9">DumpLog</a></li>
				<li><a href="/Page/grandMA3/keyword_drive/en/1.9">Drive</a></li>
				<li><a href="/Page/grandMA3/keyword_dropownership/en/1.9">DropOwnership</a></li>
				<li><a href="/Page/grandMA3/keyword_echo/en/1.9">Echo</a></li>
				<li><a href="/Page/grandMA3/keyword_edit/en/1.9">Edit</a></li>
				<li><a href="/Page/grandMA3/keyword_editsetting/en/1.9">EditSetting</a></li>
				<li><a href="/Page/grandMA3/keyword_eject/en/1.9">Eject</a></li>
				<li><a href="/Page/grandMA3/keyword_effect/en/1.9">Effect</a></li>
				<li><a href="/Page/grandMA3/keyword_encoderpage/en/1.9">EncoderPage</a></li>
				<li><a href="/Page/grandMA3/keyword_endif/en/1.9">EndIf</a></li>
				<li><a href="/Page/grandMA3/keyword_environment/en/1.9">Environment</a></li>
				<li><a href="/Page/grandMA3/keyword_exchange/en/1.9">Exchange</a></li>
				<li><a href="/Page/grandMA3/keyword_executor/en/1.9">Executor</a></li>
				<li><a href="/Page/grandMA3/keyword_export/en/1.9">Export</a></li>
				<li><a href="/Page/grandMA3/keyword_extract/en/1.9">Extract</a></li>
				<li><a href="/Page/grandMA3/keyword_extension/en/1.9">Extension</a></li>
				<li><a href="/Page/grandMA3/keyword_fade/en/1.9">Fade</a></li>
				<li><a href="/Page/grandMA3/keyword_fadercrossfade/en/1.9">FaderCrossFade</a></li>
				<li><a href="/Page/grandMA3/keyword_fadercrossfadea/en/1.9">FaderCrossFadeA</a></li>
				<li><a href="/Page/grandMA3/keyword_fadercrossfadeb/en/1.9">FaderCrossFadeB</a></li>
				<li><a href="/Page/grandMA3/keyword_fadermaster/en/1.9">FaderMaster</a></li>
				<li><a href="/Page/grandMA3/keyword_faderrate/en/1.9">FaderRate</a></li>
				<li><a href="/Page/grandMA3/keyword_faderspeed/en/1.9">FaderSpeed</a></li>
				<li><a href="/Page/grandMA3/keyword_fadertemp/en/1.9">FaderTemp</a></li>
				<li><a href="/Page/grandMA3/keyword_fadertime/en/1.9">FaderTime</a></li>
				<li><a href="/Page/grandMA3/keyword_featuregroup/en/1.9">FeatureGroup</a></li>
				<li><a href="/Page/grandMA3/keyword_filter/en/1.9">Filter</a></li>
				<li><a href="/Page/grandMA3/keyword_fix/en/1.9">Fix</a></li>
				<li><a href="/Page/grandMA3/keyword_fixture_class/en/1.9">FixtureClass</a></li>
				<li><a href="/Page/grandMA3/keyword_fixture_layer/en/1.9">FixtureLayer</a></li>
				<li><a href="/Page/grandMA3/keyword_fixture/en/1.9">Fixture</a></li>
				<li><a href="/Page/grandMA3/keyword_fixturetype/en/1.9">FixtureType</a></li>
				<li><a href="/Page/grandMA3/keyword_flip/en/1.9">Flip</a></li>
				<li><a href="/Page/grandMA3/keyword_flash/en/1.9">Flash</a></li>
				<li><a href="/Page/grandMA3/keyword_fog/en/1.9">Fog</a></li>
				<li><a href="/Page/grandMA3/keyword_freeze/en/1.9">Freeze</a></li>
				<li><a href="/Page/grandMA3/keyword_full/en/1.9">Full</a></li>
				<li><a href="/Page/grandMA3/keyword_gel/en/1.9">Gel</a></li>
				<li><a href="/Page/grandMA3/keyword_getglobalvariable/en/1.9">GetGlobalVariable</a></li>
				<li><a href="/Page/grandMA3/keyword_getuservariable/en/1.9">GetUserVariable</a></li>
				<li><a href="/Page/grandMA3/keyword_goplus/en/1.9">Go+</a></li>
				<li><a href="/Page/grandMA3/keyword_gominus/en/1.9">Go-</a></li>
				<li><a href="/Page/grandMA3/keyword_goto/en/1.9">Goto</a></li>
				<li><a href="/Page/grandMA3/keyword_grid/en/1.9">Grid</a></li>
				<li><a href="/Page/grandMA3/keyword_gridposition/en/1.9">GridPosition</a></li>
				<li><a href="/Page/grandMA3/keyword_group/en/1.9">Group</a></li>
				<li><a href="/Page/grandMA3/keyword_halfspeed/en/1.9">HalfSpeed</a></li>
				<li><a href="/Page/grandMA3/keyword_help/en/1.9">Help</a></li>
				<li><a href="/Page/grandMA3/keyword_helplua/en/1.9">HelpLua</a></li>
				<li><a href="/Page/grandMA3/keyword_hex8/en/1.9">Hex8</a></li>
				<li><a href="/Page/grandMA3/keyword_hex16/en/1.9">Hex16</a></li>
				<li><a href="/Page/grandMA3/keyword_hex24/en/1.9">Hex24</a></li>
				<li><a href="/Page/grandMA3/keyword_highlight/en/1.9">Highlight</a></li>
				<li><a href="/Page/grandMA3/keyword_houselights/en/1.9">Houselights</a></li>
				<li><a href="/Page/grandMA3/keyword_hz/en/1.9">Hz</a></li>
				<li><a href="/Page/grandMA3/keyword_if/en/1.9">If</a></li>
				<li><a href="/Page/grandMA3/keyword_ifactive/en/1.9">IfActive</a></li>
				<li><a href="/Page/grandMA3/keyword_ifoutput/en/1.9">IfOutput</a></li>
				<li><a href="/Page/grandMA3/keyword_ifprogrammer/en/1.9">IfProgrammer</a></li>
				<li><a href="/Page/grandMA3/keyword_image/en/1.9">Image</a></li>
				<li><a href="/Page/grandMA3/keyword_import/en/1.9">Import</a></li>
				<li><a href="/Page/grandMA3/keyword_index/en/1.9">Index</a></li>
				<li><a href="/Page/grandMA3/keyword_insert/en/1.9">Insert</a></li>
				<li><a href="/Page/grandMA3/keyword_integrate/en/1.9">Integrate</a></li>
				<li><a href="/Page/grandMA3/keyword_interface/en/1.9">Interface</a></li>
				<li><a href="/Page/grandMA3/keyword_invert/en/1.9">Invert</a></li>
				<li><a href="/Page/grandMA3/keyword_invite/en/1.9">Invite</a></li>
				<li><a href="/Page/grandMA3/keyword_ip/en/1.9">IP</a></li>
				<li><a href="/Page/grandMA3/keyword_joinsession/en/1.9">JoinSession</a></li>
				<li><a href="/Page/grandMA3/keyword_key/en/1.9">Key</a></li>
				<li><a href="/Page/grandMA3/keyword_keyboard/en/1.9">Keyboard</a></li>
				<li><a href="/Page/grandMA3/keyword_keyboardshortcut/en/1.9">KeyboardShortcut</a></li>
				<li><a href="/Page/grandMA3/keyword_kill/en/1.9">Kill</a></li>
				<li><a href="/Page/grandMA3/keyword_knockin/en/1.9">KnockIn</a></li>
				<li><a href="/Page/grandMA3/keyword_knockout/en/1.9">KnockOut</a></li>
				<li><a href="/Page/grandMA3/keyword_label/en/1.9">Label</a></li>
				<li><a href="/Page/grandMA3/keyword_layout/en/1.9">Layout</a></li>
				<li><a href="/Page/grandMA3/keyword_learnspeed/en/1.9">LearnSpeed</a></li>
				<li><a href="/Page/grandMA3/keyword_leavesession/en/1.9">LeaveSession</a></li>
				<li><a href="/Page/grandMA3/keyword_library/en/1.9">Library</a></li>
				<li><a href="/Page/grandMA3/keyword_list/en/1.9">List</a></li>
				<li><a href="/Page/grandMA3/keyword_listownership/en/1.9">ListOwnership</a></li>
				<li><a href="/Page/grandMA3/keyword_listreference/en/1.9">ListReference</a></li>
				<li><a href="/Page/grandMA3/keyword_load/en/1.9">Load</a></li>
				<li><a href="/Page/grandMA3/keyword_loaded/en/1.9">Loaded</a></li>
				<li><a href="/Page/grandMA3/keyword_loadshow/en/1.9">LoadShow</a></li>
				<li><a href="/Page/grandMA3/keyword_lock/en/1.9">Lock</a></li>
				<li><a href="/Page/grandMA3/keyword_login/en/1.9">LogIn</a></li>
				<li><a href="/Page/grandMA3/keyword_logout/en/1.9">LogOut</a></li>
				<li><a href="/Page/grandMA3/keyword_lowlight/en/1.9">Lowlight</a></li>
				<li><a href="/Page/grandMA3/keyword_lua/en/1.9">Lua</a></li>
				<li><a href="/Page/grandMA3/keyword_lua_file/en/1.9">LuaFile</a></li>
				<li><a href="/Page/grandMA3/keyword_macro/en/1.9">Macro</a></li>
				<li><a href="/Page/grandMA3/keyword_marker/en/1.9">MArker</a></li>
				<li><a href="/Page/grandMA3/keyword_master/en/1.9">Master</a></li>
				<li><a href="/Page/grandMA3/keyword_MAtricks/en/1.9">MAtricks</a></li>
				<li><a href="/Page/grandMA3/keyword_measure/en/1.9">Measure</a></li>
				<li><a href="/Page/grandMA3/keyword_media/en/1.9">Media</a></li>
				<li><a href="/Page/grandMA3/keyword_memoryinfo/en/1.9">MemoryInfo</a></li>
				<li><a href="/Page/grandMA3/keyword_menu/en/1.9">Menu</a></li>
				<li><a href="/Page/grandMA3/keyword_mesh/en/1.9">Mesh</a></li>
				<li><a href="/Page/grandMA3/keyword_move/en/1.9">Move</a></li>
				<li><a href="/Page/grandMA3/keyword_multipatch/en/1.9">Multipatch</a></li>
				<li><a href="/Page/grandMA3/keyword_myrunningmacro/en/1.9">MyRunningMacro</a></li>
				<li><a href="/Page/grandMA3/keyword_myrunningpreset/en/1.9">MyRunningPreset</a></li>
				<li><a href="/Page/grandMA3/keyword_myrunningsequence/en/1.9">MyRunningSequence</a></li>
				<li><a href="/Page/grandMA3/keyword_myrunningtimer/en/1.9">MyRunningTimer</a></li>
				<li><a href="/Page/grandMA3/keyword_natural/en/1.9">Natural</a></li>
				<li><a href="/Page/grandMA3/keyword_ndi/en/1.9">NDI</a></li>
				<li><a href="/Page/grandMA3/keyword_newshow/en/1.9">NewShow</a></li>
				<li><a href="/Page/grandMA3/keyword_next/en/1.9">Next</a></li>
				<li><a href="/Page/grandMA3/keyword_nexty/en/1.9">NextY</a></li>
				<li><a href="/Page/grandMA3/keyword_nextz/en/1.9">NextZ</a></li>
				<li><a href="/Page/grandMA3/keyword_networknode/en/1.9">NetworkNode</a></li>
				<li><a href="/Page/grandMA3/keyword_nondim/en/1.9">NonDim</a></li>
				<li><a href="/Page/grandMA3/keyword_normal/en/1.9">Normal</a></li>
				<li><a href="/Page/grandMA3/keyword_note/en/1.9">Note</a></li>
				<li><a href="/Page/grandMA3/keyword_off/en/1.9">Off</a></li>
				<li><a href="/Page/grandMA3/keyword_offset/en/1.9">Offset</a></li>
				<li><a href="/Page/grandMA3/keyword_on/en/1.9">On</a></li>
				<li><a href="/Page/grandMA3/keyword_onpc/en/1.9">onPC</a></li>
				<li><a href="/Page/grandMA3/keyword_osc/en/1.9">OSC</a></li>
				<li><a href="/Page/grandMA3/keyword_oops/en/1.9">Oops</a></li>
				<li><a href="/Page/grandMA3/keyword_outputlayer/en/1.9">OutputLayer</a></li>
				<li><a href="/Page/grandMA3/keyword_page/en/1.9">Page</a></li>
				<li><a href="/Page/grandMA3/keyword_part/en/1.9">Part</a></li>
				<li><a href="/Page/grandMA3/keyword_park/en/1.9">Park</a></li>
				<li><a href="/Page/grandMA3/keyword_paste/en/1.9">Paste</a></li>
				<li><a href="/Page/grandMA3/keyword_patch/en/1.9">Patch</a></li>
				<li><a href="/Page/grandMA3/keyword_pause/en/1.9">Pause</a></li>
				<li><a href="/Page/grandMA3/keyword_percent/en/1.9">Percent</a></li>
				<li><a href="/Page/grandMA3/keyword_percentfine/en/1.9">PercentFine</a></li>
				<li><a href="/Page/grandMA3/keyword_phase/en/1.9">Phase</a></li>
				<li><a href="/Page/grandMA3/keyword_physical/en/1.9">Physical</a></li>
				<li><a href="/Page/grandMA3/keyword_plugin/en/1.9">Plugin</a></li>
				<li><a href="/Page/grandMA3/keyword_preset/en/1.9">Preset</a></li>
				<li><a href="/Page/grandMA3/keyword_presetupdate/en/1.9">PresetUpdate</a></li>
				<li><a href="/Page/grandMA3/keyword_press/en/1.9">Press</a></li>
				<li><a href="/Page/grandMA3/keyword_preview/en/1.9">Preview</a></li>
				<li><a href="/Page/grandMA3/keyword_previous/en/1.9">Previous</a></li>
				<li><a href="/Page/grandMA3/keyword_previousy/en/1.9">PreviousY</a></li>
				<li><a href="/Page/grandMA3/keyword_previousz/en/1.9">PreviousZ</a></li>
				<li><a href="/Page/grandMA3/keyword_programmer/en/1.9">Programmer</a></li>
				<li><a href="/Page/grandMA3/keyword_property/en/1.9">Property</a></li>
				<li><a href="/Page/grandMA3/keyword_processingunit/en/1.9">ProcessingUnit</a></li>
				<li><a href="/Page/grandMA3/keyword_pyro/en/1.9">Pyro</a></li>
				<li><a href="/Page/grandMA3/keyword_quickey/en/1.9">Quickey</a></li>
				<li><a href="/Page/grandMA3/keyword_rate/en/1.9">Rate1</a></li>
				<li><a href="/Page/grandMA3/keyword_rdm/en/1.9">RDM</a></li>
				<li><a href="/Page/grandMA3/keyword_readout/en/1.9">Readout</a></li>
				<li><a href="/Page/grandMA3/keyword_reboot/en/1.9">Reboot</a></li>
				<li><a href="/Page/grandMA3/keyword_recast/en/1.9">Recast</a></li>
				<li><a href="/Page/grandMA3/keyword_record/en/1.9">Record</a></li>
				<li><a href="/Page/grandMA3/keyword_relative/en/1.9">Relative</a></li>
				<li><a href="/Page/grandMA3/keyword_release/en/1.9">Release</a></li>
				<li><a href="/Page/grandMA3/keyword_reloadallplugins/en/1.9">ReloadAllPlugins</a></li>
				<li><a href="/Page/grandMA3/keyword_reloadui/en/1.9">ReloadUI</a></li>
				<li><a href="/Page/grandMA3/keyword_remote/en/1.9">Remote</a></li>
				<li><a href="/Page/grandMA3/keyword_remotehid/en/1.9">RemoteHID</a></li>
				<li><a href="/Page/grandMA3/keyword_remotecommand/en/1.9">RemoteCommand</a></li>
				<li><a href="/Page/grandMA3/keyword_remove/en/1.9">Remove</a></li>
				<li><a href="/Page/grandMA3/keyword_renderquality/en/1.9">RenderQuality</a></li>
				<li><a href="/Page/grandMA3/keyword_reset/en/1.9">Reset</a></li>
				<li><a href="/Page/grandMA3/keyword_restart/en/1.9">Restart</a></li>
				<li><a href="/Page/grandMA3/keyword_root/en/1.9">Root</a></li>
				<li><a href="/Page/grandMA3/keyword_realtimechannel/en/1.9">RealtimeChannel</a></li>
				<li><a href="/Page/grandMA3/keyword_runningmacro/en/1.9">RunningMacro</a></li>
				<li><a href="/Page/grandMA3/keyword_runningpreset/en/1.9">RunningPreset</a></li>
				<li><a href="/Page/grandMA3/keyword_runningsequence/en/1.9">RunningSequence</a></li>
				<li><a href="/Page/grandMA3/keyword_runningtimecode/en/1.9">RunningTimecode</a></li>
				<li><a href="/Page/grandMA3/keyword_runningtimer/en/1.9">RunningTimer</a></li>
				<li><a href="/Page/grandMA3/keyword_saveshow/en/1.9">SaveShow</a></li>
				<li><a href="/Page/grandMA3/keyword_screenconfiguration/en/1.9">ScreenConfiguration</a></li>
				<li><a href="/Page/grandMA3/keyword_screencontent/en/1.9">ScreenContent</a></li>
				<li><a href="/Page/grandMA3/keyword_scribble/en/1.9">Scribble</a></li>
				<li><a href="/Page/grandMA3/keyword_seconds/en/1.9">Seconds</a></li>
				<li><a href="/Page/grandMA3/keyword_select/en/1.9">Select</a></li>
				<li><a href="/Page/grandMA3/keyword_selection/en/1.9">Selection</a></li>
				<li><a href="/Page/grandMA3/keyword_selectfixtures/en/1.9">SelectFixtures</a></li>
				<li><a href="/Page/grandMA3/keyword_sequence/en/1.9">Sequence</a></li>
				<li><a href="/Page/grandMA3/keyword_sendmidi/en/1.9">SendMIDI</a></li>
				<li><a href="/Page/grandMA3/keyword_sendosc/en/1.9">SendOSC</a></li>
				<li><a href="/Page/grandMA3/keyword_set/en/1.9">Set</a></li>
				<li><a href="/Page/grandMA3/keyword_setglobalvariable/en/1.9">SetGlobalVariable</a></li>
				<li><a href="/Page/grandMA3/keyword_setuservariable/en/1.9">SetUserVariable</a></li>
				<li><a href="/Page/grandMA3/keyword_shuffle/en/1.9">Shuffle</a></li>
				<li><a href="/Page/grandMA3/keyword_shutdown/en/1.9">ShutDown</a></li>
				<li><a href="/Page/grandMA3/keyword_snapdelay/en/1.9">SnapDelay</a></li>
				<li><a href="/Page/grandMA3/keyword_software_import/en/1.9">SoftwareImport</a></li>
				<li><a href="/Page/grandMA3/keyword_SoftwareUpdate/en/1.9">SoftwareUpdate</a></li>
				<li><a href="/Page/grandMA3/keyword_soundchannel/en/1.9">SoundChannel</a></li>
				<li><a href="/Page/grandMA3/keyword_solo/en/1.9">Solo</a></li>
				<li><a href="/Page/grandMA3/keyword_SpecialExec/en/1.9">SpecialExecutor</a></li>
				<li><a href="/Page/grandMA3/keyword_speed/en/1.9">Speed</a></li>
				<li><a href="/Page/grandMA3/keyword_speed1/en/1.9">Speed1</a></li>
				<li><a href="/Page/grandMA3/keyword_speedmaster/en/1.9">SpeedMaster</a></li>
				<li><a href="/Page/grandMA3/keyword_stage/en/1.9">Stage</a></li>
				<li><a href="/Page/grandMA3/keyword_station/en/1.9">Station</a></li>
				<li><a href="/Page/grandMA3/keyword_stationsettings/en/1.9">StationSettings</a></li>
				<li><a href="/Page/grandMA3/keyword_step/en/1.9">Step</a></li>
				<li><a href="/Page/grandMA3/keyword_stomp/en/1.9">Stomp</a></li>
				<li><a href="/Page/grandMA3/keyword_store/en/1.9">Store</a></li>
				<li><a href="/Page/grandMA3/keyword_switchtograndMA2software/en/1.9">SwitchTograndMA2Software</a></li>
				<li><a href="/Page/grandMA3/keyword_switchtograndma3software/en/1.9">SwitchTograndMA3Software</a></li>
				<li><a href="/Page/grandMA3/keywords_swap/en/1.9">Swap</a></li>
				<li><a href="/Page/grandMA3/keyword_temp/en/1.9">Temp</a></li>
				<li><a href="/Page/grandMA3/keyword_thru/en/1.9">Thru</a></li>
				<li><a href="/Page/grandMA3/keyword_time/en/1.9">Time</a></li>
				<li><a href="/Page/grandMA3/keyword_timecode/en/1.9">Timecode</a></li>
				<li><a href="/Page/grandMA3/Keyword_timecodeslot/en/1.9">TimecodeSlot</a></li>
				<li><a href="/Page/grandMA3/keyword_timer/en/1.9">Timer</a></li>
				<li><a href="/Page/grandMA3/keyword_toggle/en/1.9">Toggle</a></li>
				<li><a href="/Page/grandMA3/keyword_topup/en/1.9">TopUp</a></li>
				<li><a href="/Page/grandMA3/keyword_top/en/1.9">Top</a></li>
				<li><a href="/Page/grandMA3/keyword_transition/en/1.9">Transition</a></li>
				<li><a href="/Page/grandMA3/keyword_type/en/1.9">Type</a></li>
				<li><a href="/Page/grandMA3/keyword_uichannel/en/1.9">UIChannel</a></li>
				<li><a href="/Page/grandMA3/keyword_uigridselection/en/1.9">UIGridSelection</a></li>
				<li><a href="/Page/grandMA3/keyword_unblock/en/1.9">Unblock</a></li>
				<li><a href="/Page/grandMA3/keyword_universal/en/1.9">Universal</a></li>
				<li><a href="/Page/grandMA3/keyword_unlock/en/1.9">Unlock</a></li>
				<li><a href="/Page/grandMA3/keyword_unpark/en/1.9">Unpark</a></li>
				<li><a href="/Page/grandMA3/keyword_unpress/en/1.9">Unpress</a></li>
				<li><a href="/Page/grandMA3/keyword_up/en/1.9">Up</a></li>
				<li><a href="/Page/grandMA3/keyword_update/en/1.9">Update</a></li>
				<li><a href="/Page/grandMA3/keyword_updatecontent/en/1.9">UpdateContent</a></li>
				<li><a href="/Page/grandMA3/keyword_user1/en/1.9">User1</a></li>
				<li><a href="/Page/grandMA3/keyword_user2/en/1.9">User2</a></li>
				<li><a href="/Page/grandMA3/keyword_user/en/1.9">User</a></li>
				<li><a href="/Page/grandMA3/keyword_user_profile/en/1.9">UserProfile</a></li>
				<li><a href="/Page/grandMA3/keyword_videos/en/1.9">Video</a></li>
				<li><a href="/Page/grandMA3/keyword_version/en/1.9">Version</a></li>
				<li><a href="/Page/grandMA3/keyword_view/en/1.9">View</a></li>
				<li><a href="/Page/grandMA3/keyword_viewbutton/en/1.9">ViewButton</a></li>
				<li><a href="/Page/grandMA3/keyword_width/en/1.9">Width</a></li>
				<li><a href="/Page/grandMA3/keyword_world/en/1.9">World</a></li>
				<li><a href="/Page/grandMA3/keyword_zero/en/1.9">Zero</a></li>
	</ul>

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option value="10">1.0</option>
<option value="32">1.1</option>
<option value="35">1.2</option>
<option value="36">1.3</option>
<option value="37">1.4</option>
<option value="38">1.5</option>
<option value="39">1.6</option>
<option value="40">1.7</option>
<option value="42">1.8</option>
<option selected="selected" value="43">1.9</option>
<option value="44">2.0</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="16">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="500335d8-271f-4a14-b965-f71702cee50d">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/grandMA3/csk_parent_child/en/1.9'; " title="Go to previous page 'Parent child concept'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/grandMA3/keyword_semicolon/en/1.9';" title="Go to next page '; [Semicolon]'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
	<div class="clear-fix"></div>
	<div class="pull-right">
	
			<button class="btn btn-mini" onclick="location.href='/Media/TopicPdf/86573/43';" title="Open/Save this topic as PDF document for viewing or printing">
				<img src="/Content/images/icons/filetype_pdf.png"> Open topic as PDF
			</button>
	</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

	
